# UberTrainingPlane

./: .gitignore  README.md  README_dev.md  esercizi_custom.json  fitness_wasm-137c45d1dd74a129.js  fitness_wasm-137c45d1dd74a129_bg.wasm  fitness_wasm-1be24427cef5117e.js  fitness_wasm-1be24427cef5117e_bg.wasm  fitness_wasm-215e39792dcc8b1b.js  fitness_wasm-215e39792dcc8b1b_bg.wasm  fitness_wasm-47c280208b130b66.js  fitness_wasm-47c280208b130b66_bg.wasm  fitness_wasm-589466afe7fd2228.js  fitness_wasm-589466afe7fd2228_bg.wasm  fitness_wasm-59df9d2a0cc7c3dd.js  fitness_wasm-59df9d2a0cc7c3dd_bg.wasm  fitness_wasm-628b67259e3110b5.js  fitness_wasm-628b67259e3110b5_bg.wasm  fitness_wasm-6c83699d912f886d.js  fitness_wasm-6c83699d912f886d_bg.wasm  fitness_wasm-6e215080e61faf5e.js  fitness_wasm-6e215080e61faf5e_bg.wasm  fitness_wasm-71dca4368858414d.js  fitness_wasm-71dca4368858414d_bg.wasm  fitness_wasm-72f55911deae3e2b.js  fitness_wasm-72f55911deae3e2b_bg.wasm  fitness_wasm-8350869ce07dd3b9.js  fitness_wasm-8350869ce07dd3b9_bg.wasm  fitness_wasm-8418ee83451993a2.js  fitness_wasm-8418ee83451993a2_bg.wasm  fitness_wasm-878ecc4f85d54dac.js  fitness_wasm-878ecc4f85d54dac_bg.wasm  fitness_wasm-9aa7963d6049c579_bg.wasm  fitness_wasm-a0c379974e46ee3.js  fitness_wasm-a0c379974e46ee3_bg.wasm  fitness_wasm-a637d4bf0bde2000.js  fitness_wasm-a637d4bf0bde2000_bg.wasm  fitness_wasm-ae37cf51e56e73f4.js  fitness_wasm-ae37cf51e56e73f4_bg.wasm  fitness_wasm-b9600448655036af.js  (+10 more)
app/: Cargo.toml  esercizi.json  id_migration.json  index.html  video_overrides.json
app/schede/: catalog.json  (+9 more)
(+25 files in other folders)
